Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-04-07 (SVN):
    * Bumped the version to 1.5.3 in the development tree.

2012-04-04 (SVN):
    * net_udp.c (UDP_Init): Made Watt-32 to not exit immediately when
      sock_init() fails, such as when a pktdrv is not present. Moved a
      Watt-32 specific include to net_sys.h.
    * updated version date stamp to 2012-04-04.

2012-04-03 (SVN):
    * updated BUGS and TODO documents and v1.5.2 release notes.
    * updated version date stamp to 2012-04-03.

2012-04-01 (SVN):
    * net_dgrm.c: Fixed the types of testSocket and test2Socket from int
      to sys_socket_t.
    * updated version date stamp to 2012-04-01.

2012-03-31 (SVN):
    * Reverted dos Watt-32 library's use of zone memory, because I still
      need debugging things. Changed Watt-32 memory requirement to 192K,
      as detailed in h2config.h. LEAVE_FOR_CACHE and LOCKED_FOR_MALLOC
      definitions are moved to dosisms.h. Changed the LOCKED_FOR_MALLOC
      value so that it includes the additional memory needed by Watt-32.
      Added explicit call of dbug_init() to net_udp.c::NET_Init(). Added
      explicit call of sock_init() to net_udp.c::NET_Init().
    * updated version date stamp to 2012-03-31.

2012-03-27 (SVN):
    * oslibs/dos/watt32/lib/libwatt.a: recompiled with more compile time
      options (USE_STATISTICS, USE_MULTICAST and USE_RS232_DBG) disabled.
    * oslibs/dos/codecs: recompiled dos codecs.
    * updated version date stamp to 2012-03-27.

2012-03-25 (SVN):
    * Changed DOS version so that WatTCP library allocates memory on the
      secondary zone instead of from system. Adjusted zone.c to reserve
      proper amount of memory for WatTCP.

2012-03-25 (SVN):
    * zone.c: Changed the secondary zone allocation to be realized when
      SECZONE_SIZE is defined as a positive value, not only for client
      applications.
    * updated version date stamp to 2012-03-25.

2012-03-24 (SVN):