@@ -3,6 +3,9 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2012-04-08 (SVN):
+    * Moved extern declaration of Mod_ReloadTextures() to gl_model.h.
+
 2012-04-07 (SVN):
     * Bumped the version to 1.5.3 in the development tree.
 
